# bazel-wasm-example

./: BUILD  README.md  WORKSPACE  deployment.yaml
cmd/server/: BUILD.bazel  main.go
cmd/wasm/: BUILD.bazel  main.go
